--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,7 @@ micronautBuild {
     importMicronautCatalog("micronaut-reactor")
     importMicronautCatalog("micronaut-test")
     importMicronautCatalog("micronaut-test-resources")
+    //importMicronautCatalog("io.vertx")
 }
 
 rootProject.name = 'test-parent'
@@ -34,3 +35,4 @@ include "test-kotest5"
 include "test-rest-assured"
 include 'test-suite-sql-r2dbc'
 include 'test-suite-at-sql-jpa'
+include 'test-suite-at-sql-reactive-session-factory'
